--- a/project_final/fulltank/fuel/templates/fuel/index3_pt.html
+++ b/project_final/fulltank/fuel/templates/fuel/index3_pt.html
@@ -12,7 +12,7 @@ Comparador Gasolina Etanol - Como saber qual combustível vale mais a pena
         <div class="container-fluid">
             <!--Opening-->
             <div class="row justify-content-center">
-                <h1 id="instructions"><strong>Quer saber qual é a opção mais vantajosa para abastecer seu carro: gasolina ou etanol?</strong></h1>
+                <h1 id="instructions"><strong>Como saber qual é a opção mais vantajosa para abastecer seu carro: gasolina ou etanol</strong></h1>
             </div>
             <div class="row justify-content-center">
                 <h2 id="instructions2">Siga os 3 passos abaixo:</h2>
