--- a/project_final/fulltank/fuel/templates/fuel/advanced_search_pt.html
+++ b/project_final/fulltank/fuel/templates/fuel/advanced_search_pt.html
@@ -94,10 +94,30 @@
             </ul>
         </div>
 
+
+        </br>
+        <h6 id="sharing">Compartilhe</h6>
+            <a href="http://twitter.com/share?text=Comparador Gasolina Etanol - Como saber qual combustível vale mais a pena&url=https://www.gasolinaetanol.com.br/" rel="noopener noreferrer" target="_blank">
+                <i class="fab fa-twitter"></i>
+            </a>
+
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.gasolinaetanol.com.br/" target="_blank" title="Comparador Gasolina Etanol - Como saber qual combustível vale mais a pena">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+
+            <a href="https://api.whatsapp.com/send?text=Comparador Gasolina Etanol - Como saber qual combustível vale mais a pena https://www.gasolinaetanol.com.br/" rel="noopener noreferrer" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+
+            <a href="mailto:?subject=Compartilhando site Comparador Gasolina Etanol&amp;body=Comparador Gasolina Etanol - Como saber qual combustível vale mais a pena https://www.gasolinaetanol.com.br/"
+                title="Share by Email">
+                <i class="fas fa-envelope"></i>
+            </a>
+
         </br>
         </br>
         </br>
-        </br>
+
 
     </div>
     <div class="container-fluid">
