--- a/project_final/fulltank/fuel/templates/fuel/base2_pt.html
+++ b/project_final/fulltank/fuel/templates/fuel/base2_pt.html
@@ -13,6 +13,7 @@
 
  	 gtag('config', 'UA-139748764-1');
 	</script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
         <title>{% block title %}{% endblock %}</title>
 	<META NAME="Description" CONTENT="Escolha seu carro e cidade e veja qual combustível vale mais a pena para o seu carro, Atualizado em: Maio 2019">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -59,5 +60,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5cd572ea045ae800"></script>
+
     </body>
 </html>
