--- a/project_final/fulltank/fuel/templates/fuel/base_pt.html
+++ b/project_final/fulltank/fuel/templates/fuel/base_pt.html
@@ -13,7 +13,8 @@
 
  	 gtag('config', 'UA-139748764-1');
 	</script>
-        <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <title>{% block title %}{% endblock %}</title>
 	<META NAME="Description" CONTENT="Como saber qual combustível usar: gasolina ou etanol. Escolha seu carro e cidade e veja qual é mais vantajoso para o seu bolso. Atualizado em: Maio 2019">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8"/>
@@ -24,36 +25,6 @@
         <script src="{% static 'fuel/index2_pt.js' %}"></script>
     </head>
     <body>
-        <script type="application/ld+json">
-        {
-          "@context": "http://schema.org",
-          "@type": "HowTo",
-          "name": "Como saber qual combustível usar",
-          "description": "Para saber com qual combustível é mais vantajoso abastecer na estrada ou na cidade, é só escolher seu carro e cidade e calculamos para você",
-          "step": [
-            {
-            "@type": "HowToStep",
-            "name": "Selecione seu carro",
-            "url": "https://www.gasolinaetanol.com.br",
-            "text": "Procure pelo seu carro na lista. Ex: digite onix e escolha seu entre os resultados.",
-            "image": "{% static 'fuel/step1.png' %}"
-          }, {
-            "@type": "HowToStep",
-            "name": "Selecione sua cidade",
-            "url": "https://www.gasolinaetanol.com.br",
-            "text": "Procure pela cidade onde vai abastecer na lista. Ex: digite sao paulo e ecolha entre os resultados. Você também pode digitar os preços da gasolina e etanol se preferir.",
-            "image": "{% static 'fuel/step2.png' %}"
-          }, {
-            "@type": "HowToStep",
-            "name": "Veja os resultados",
-            "url": "https://www.gasolinaetanol.com.br",
-            "text": "Clique em Enviar e veja os resultados de qual combustível vale mais a pena usar: gasolina ou etanol na esstra e na cidade. Clique em +Detalhes se quiser saber detalhes dos cálculos.",
-            "image": "{% static 'fuel/step3.png' %}"
-          }
-        ]
-        }
-        </script>
-
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #51005d;">
             <div class="container">
             <div class="collapse navbar-collapse dual-collapse2 w-100 order-1 order-md-0">
