--- a/project_final/fulltank/fuel/static/fuel/styles_bkp2_pt.css
+++ b/project_final/fulltank/fuel/static/fuel/styles_bkp2_pt.css
@@ -5,6 +5,67 @@ body {
     background: white;
 }
 
+.fab:hover {
+    opacity: 0.7;
+}
+
+.fas:hover {
+    opacity: 0.7;
+}
+
+.fa-twitter {
+  font-size: 20px;
+  color: white;
+  background: #55ACEE;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 2px 5px 2px;
+  padding: 10px 0 0 0;
+}
+
+.fa-facebook-f {
+  font-size: 20px;
+  color: white;
+  background: #3b5998;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 2px 5px 2px;
+  padding: 10px 0 0 0;
+}
+
+.fa-whatsapp {
+  font-size: 20px;
+  color: white;
+  background: #25D366;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 2px 5px 2px;
+  padding: 10px 0 0 0;
+}
+
+.fa-envelope {
+  font-size: 20px;
+  color: white;
+  /* background: #ff5909;*/
+  background: #545454;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 2px 5px 2px;
+  padding: 10px 0 0 0;
+}
+
 #nav-color {
     background: #51005d;
 }
